--- a/articles/c-pointer-arithmetic/c-pointer-arithmetic.tex
+++ b/articles/c-pointer-arithmetic/c-pointer-arithmetic.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 \usepackage{color}
 \usepackage{courier}
-\usepackage[left=20px,right=20px,top=10px,bottom=10px]{geometry}
+\usepackage[left=50px,right=20px,top=10px,bottom=10px]{geometry}
 \usepackage[T1]{fontenc}
 
 \lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
@@ -32,7 +32,7 @@
   commentstyle=\color{gray},
   keywordstyle=\color{blue},
   classoffset=0,
-  % morekeywords={@property,@synthesize,super},
+  % morekeywords={},
   classoffset=1,
   morekeywords={function\_t,point\_t,vector3\_t},
   keywordstyle=\color{darkturquoise},
@@ -209,8 +209,8 @@ int main() {
   \\Pointers on their own are a very simple concept.
   But due to their simplicity, they are not really expressive and often hide their specific intent for beginners in C or similar languages.
   
-  \newpage
-  \section{Contributors}
+%  \newpage
+%  \section{Contributors}
   
   \newpage
   \section{Source File Content}
