--- a/articles/c-cpp-memory-allocation/c-cpp-memory-allocation.tex
+++ b/articles/c-cpp-memory-allocation/c-cpp-memory-allocation.tex
@@ -44,4 +44,11 @@
   Unless specified otherwise, the content of this article is licensed under the \href{https://creativecommons.org/licenses/by-sa/4.0/legalcode}{Creative Commons Attribution-ShareAlike 4.0 International Public License}.
   You may modify, copy, distribute, and display this material, but you must give credit to the original authors. Please see the license for details.
   \tableofcontents
+  \section{Introduction}
+  In this article I will try to explain how memory allocation in C and C++ works in depth.
+  Therefore, prior knowledge in C/C++ is needed to fully understand all the topics.
+  In case you want to get more familiar with C and memory basics, I also have a some articles on that topic:
+  \begin{itemize}
+    \item \href{https://joern-neumeyer.de/articles/c-pointer-arithmetic/c-pointer-arithmetic.pdf}{Understanding C Pointer Arithmetic}
+  \end{itemize}
 \end{document}
