adjusted page sizes

--- a/articles/c-pointer-arithmetic/c-pointer-arithmetic.tex
+++ b/articles/c-pointer-arithmetic/c-pointer-arithmetic.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 \usepackage{color}
 \usepackage{courier}
-\usepackage[left=50px,right=20px,top=10px,bottom=10px]{geometry}
+\usepackage[left=.8in,right=.8in,top=.35in,bottom=.35in]{geometry}
 \usepackage[T1]{fontenc}
 
 \lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
